--- a/RegionalCorrelations2.Rmd
+++ b/RegionalCorrelations2.Rmd
@@ -10,6 +10,8 @@ Conditions in this set of graphs:
 - 3. Correlations use "complete.obs"
 - 4. Ordering by "hclust"
 - 5. Removed bad freezers from young group
+- 6. Imputed missing values with mean
+- 7. All matrices only reflect regions without NA, so each matrix might be a different size
 
 ## Update on Jun 9:
 All heatmaps have been updated so that p-values matrix have been compared, and all values that are NOT significant have been blanked out as white tiles in the matrix. 
@@ -22,8 +24,8 @@ knew.molten3 = knew.molten2 %>%
   filter(UNITS == "density") %>%
   filter(BRIGHTNESS == 'total')
 
-cluster.method = "hclust"
-use.method = "complete.obs"
+cluster.method = "alphabet"
+use.method = "complete"
 corr.type = "pearson"
 
 ```
@@ -39,7 +41,7 @@ a = knew.molten3 %>%
   dcast(ID ~ grain2, value.var="z", fun.aggregate = mean)  %>%
   mutate_all(funs(ifelse(is.na(.), mean(., na.rm = TRUE), .))) 
 
-b = corr.test(a[,2:67])
+b = corr.test(a[,2:67], use=use.method)
 
 r.melt = b$r %>% melt()
 p.melt = b$p %>% melt()
@@ -58,7 +60,7 @@ a = knew.molten3 %>%
   dcast(ID ~ grain2, value.var="z", fun.aggregate = mean)  %>%
   mutate_all(funs(ifelse(is.na(.), mean(., na.rm = TRUE), .))) 
 
-b = corr.test(a[,2:67])
+b = corr.test(a[,2:67], use=use.method)
 
 r.melt = b$r %>% melt()
 p.melt = b$p %>% melt()
@@ -76,7 +78,7 @@ a = knew.molten3 %>%
   dcast(ID ~ grain2, value.var="z", fun.aggregate = mean)  %>%
   mutate_all(funs(ifelse(is.na(.), mean(., na.rm = TRUE), .))) 
 
-b = corr.test(a[,2:67])
+b = corr.test(a[,2:67], use=use.method)
 
 r.melt = b$r %>% melt()
 p.melt = b$p %>% melt()
@@ -86,32 +88,46 @@ ggplot(r.melt) + aes(value, p) + geom_point() +
 ```
 
 
-## Arc
-### Arc Old vs Young
+## Arc - all mice
 ```{r}
-
 a = knew.molten3 %>%
-  filter(EXPT == 'YOUNG') %>%
-  filter(CHANNEL == 'OL') %>%
+  filter(CHANNEL == 'ArcIHC') %>%
   filter(!(EXPT =='YOUNG' & VALENCE=='SHOCK' & CONTEXT=='AA' & FREEZE < 30)) %>% # removes young bad freezers
   mutate(grain2 = paste(CHANNEL, SubROI_SubroiAGGR)) %>%
   ddply(.(CHANNEL, SubROI_SubroiAGGR), transform, z = scale(value)) %>%
   dcast(ID ~ grain2, value.var="z", fun.aggregate = mean) %>%
   mutate_all(funs(ifelse(is.na(.), mean(., na.rm = TRUE), .)))
 
-b = corr.test(a[,2:67])
+b = corr.test(a[,2:67], use=use.method)
+corrplot(b$r, method="color", order=cluster.method, tl.cex=0.4, title="all mice, ArcIHC", mar=c(0,0,1,0), p.mat=b$p, sig.level=0.05, insig="blank")
+
+```
+
+### Arc Old vs Young
+```{r}
+
+a = knew.molten3 %>%
+  filter(EXPT == 'YOUNG') %>%
+  filter(CHANNEL == 'ArcIHC') %>%
+  filter(!(EXPT =='YOUNG' & VALENCE=='SHOCK' & CONTEXT=='AA' & FREEZE < 30)) %>% # removes young bad freezers
+  mutate(grain2 = paste(CHANNEL, SubROI_SubroiAGGR)) %>%
+  ddply(.(CHANNEL, SubROI_SubroiAGGR), transform, z = scale(value)) %>%
+  dcast(ID ~ grain2, value.var="z", fun.aggregate = mean) %>%
+  mutate_all(funs(ifelse(is.na(.), mean(., na.rm = TRUE), .)))
+
+b = corr.test(a[,2:67], use=use.method)
 corrplot(b$r, method="color", order=cluster.method, tl.cex=0.4, title="all young", mar=c(0,0,1,0), p.mat=b$p, sig.level=0.05, insig="blank")
 
 a = knew.molten3 %>%
   filter(EXPT == 'OLD') %>%
-  filter(CHANNEL == 'OL') %>%
+  filter(CHANNEL == 'ArcIHC') %>%
   filter(!(EXPT =='YOUNG' & VALENCE=='SHOCK' & CONTEXT=='AA' & FREEZE < 30)) %>% # removes young bad freezers
   mutate(grain2 = paste(CHANNEL, SubROI_SubroiAGGR)) %>%
   ddply(.(CHANNEL, SubROI_SubroiAGGR), transform, z = scale(value)) %>%
   dcast(ID ~ grain2, value.var="z", fun.aggregate = mean) %>%
   mutate_all(funs(ifelse(is.na(.), mean(., na.rm = TRUE), .))) 
 
-b = corr.test(a[,2:67])
+b = corr.test(a[,2:67], use=use.method)
 corrplot(b$r, method="color", order=cluster.method, tl.cex=0.4, title="all old", mar=c(0,0,1,0), p.mat=b$p, sig.level=0.05, insig="blank")
 
 ```
@@ -129,7 +145,7 @@ a = knew.molten3 %>%
   dcast(ID ~ grain2, value.var="z", fun.aggregate = mean)  %>%
   mutate_all(funs(ifelse(is.na(.), mean(., na.rm = TRUE), .))) 
 
-b = corr.test(a[,2:67])
+b = corr.test(a[,2:67], use=use.method)
 corrplot(b$r, method="color", order=cluster.method, tl.cex=0.4, title="all shock arc", mar=c(0,0,1,0), p.mat=b$p, sig.level=0.05, insig="blank")
 
 a = knew.molten3 %>%
@@ -141,7 +157,7 @@ a = knew.molten3 %>%
   dcast(ID ~ grain2, value.var="z", fun.aggregate = mean)  %>%
   mutate_all(funs(ifelse(is.na(.), mean(., na.rm = TRUE), .))) 
 
-b = corr.test(a[,2:67])
+b = corr.test(a[,2:67], use=use.method)
 corrplot(b$r, method="color", order=cluster.method, tl.cex=0.4, title="all context arc", mar=c(0,0,1,0), p.mat=b$p, sig.level=0.05, insig="blank")
 
 ```
@@ -159,8 +175,9 @@ a = knew.molten3 %>%
   ddply(.(CHANNEL, SubROI_SubroiAGGR), transform, z = scale(value)) %>%
   dcast(ID ~ grain2, value.var="z", fun.aggregate = mean)  %>%
   mutate_all(funs(ifelse(is.na(.), mean(., na.rm = TRUE), .))) 
+  
 
-b = corr.test(a[,2:67])
+b = corr.test(a[,2:67], use=use.method)
 corrplot(b$r, method="color", order=cluster.method, tl.cex=0.4, title="shock AA", mar=c(0,0,1,0), p.mat=b$p, sig.level=0.05, insig="blank")
 
 
@@ -173,7 +190,7 @@ a = knew.molten3 %>%
   dcast(ID ~ grain2, value.var="z", fun.aggregate = mean)  %>%
   mutate_all(funs(ifelse(is.na(.), mean(., na.rm = TRUE), .))) 
 
-b = corr.test(a[,2:67])
+b = corr.test(a[,2:67], use=use.method)
 corrplot(b$r, method="color", order=cluster.method, tl.cex=0.4, title="shock AB", mar=c(0,0,1,0), p.mat=b$p, sig.level=0.05, insig="blank")
 
 
@@ -186,7 +203,7 @@ a = knew.molten3 %>%
   dcast(ID ~ grain2, value.var="z", fun.aggregate = mean)  %>%
   mutate_all(funs(ifelse(is.na(.), mean(., na.rm = TRUE), .))) 
 
-b = corr.test(a[,2:67])
+b = corr.test(a[,2:67], use=use.method)
 corrplot(b$r, method="color", order=cluster.method, tl.cex=0.4, title="ctx AA", mar=c(0,0,1,0), p.mat=b$p, sig.level=0.05, insig="blank")
 
 
@@ -199,13 +216,55 @@ a = knew.molten3 %>%
   dcast(ID ~ grain2, value.var="z", fun.aggregate = mean)  %>%
   mutate_all(funs(ifelse(is.na(.), mean(., na.rm = TRUE), .))) 
 
-b = corr.test(a[,2:67])
+b = corr.test(a[,2:67], use=use.method)
+
 corrplot(b$r, method="color", order=cluster.method, tl.cex=0.4, title="ctx AB", mar=c(0,0,1,0), p.mat=b$p, sig.level=0.05, insig="blank")
 
 
 ```
 
+### Compare each subgroup vs. AGE
+```{r}
+for (expt in unique(knew.molten3$EXPT)) {
+  for (ctx in unique(knew.molten3$CONTEXT)) {
+    for (val in unique(knew.molten3$VALENCE)) {
+        a = knew.molten3 %>%
+          filter(CHANNEL == 'ArcIHC') %>%
+          filter(EXPT==expt) %>%
+          filter(CONTEXT==ctx & VALENCE ==val) %>%
+          filter(!(EXPT =='YOUNG' & VALENCE=='SHOCK' & CONTEXT=='AA' & FREEZE < 30)) %>% # removes young bad freezers
+          mutate(grain2 = paste(CHANNEL, SubROI_SubroiAGGR)) %>%
+          ddply(.(CHANNEL, SubROI_SubroiAGGR), transform, z = scale(value)) %>%
+          dcast(ID ~ grain2, value.var="z", fun.aggregate = mean)  %>%
+          mutate_all(funs(ifelse(is.na(.), mean(., na.rm = TRUE), .)))  %>%
+          select_if(~!all(is.na(.)))
+        
+        b = corr.test(a[,2:dim(a)[2]])
+        corrplot(b$r, method="color", order=cluster.method, tl.cex=0.4, 
+                 title=paste(val, ctx, expt), 
+                 mar=c(0,0,1,0), p.mat=b$p, sig.level=0.05, insig="blank")
+    }
+  }
+}
+```
+
+
+
+
 ## OL 
+```{r}
+a = knew.molten3 %>%
+  filter(CHANNEL == 'OL') %>%
+  filter(!(EXPT =='YOUNG' & VALENCE=='SHOCK' & CONTEXT=='AA' & FREEZE < 30)) %>% # removes young bad freezers
+  mutate(grain2 = paste(CHANNEL, SubROI_SubroiAGGR)) %>%
+  ddply(.(CHANNEL, SubROI_SubroiAGGR), transform, z = scale(value)) %>%
+  dcast(ID ~ grain2, value.var="z", fun.aggregate = mean) %>%
+  mutate_all(funs(ifelse(is.na(.), mean(., na.rm = TRUE), .)))
+
+b = corr.test(a[,2:67], use=use.method)
+corrplot(b$r, method="color", order=cluster.method, tl.cex=0.4, title="all mice, OL", mar=c(0,0,1,0), p.mat=b$p, sig.level=0.05, insig="blank")
+
+```
 
 ### Old vs Young
 ```{r}
@@ -219,7 +278,7 @@ a = knew.molten3 %>%
   dcast(ID ~ grain2, value.var="z", fun.aggregate = mean)  %>%
   mutate_all(funs(ifelse(is.na(.), mean(., na.rm = TRUE), .))) 
 
-b = corr.test(a[,2:67])
+b = corr.test(a[,2:67], use=use.method)
 corrplot(b$r, method="color", order=cluster.method, tl.cex=0.4, title="all young", mar=c(0,0,1,0), p.mat=b$p, sig.level=0.05, insig="blank")
 
 a = knew.molten3 %>%
@@ -231,7 +290,7 @@ a = knew.molten3 %>%
   dcast(ID ~ grain2, value.var="z", fun.aggregate = mean)  %>%
   mutate_all(funs(ifelse(is.na(.), mean(., na.rm = TRUE), .))) 
 
-b = corr.test(a[,2:67])
+b = corr.test(a[,2:67], use=use.method)
 corrplot(b$r, method="color", order=cluster.method, tl.cex=0.4, title="all old", mar=c(0,0,1,0), p.mat=b$p, sig.level=0.05, insig="blank")
 
 ```
@@ -248,7 +307,7 @@ a = knew.molten3 %>%
   dcast(ID ~ grain2, value.var="z", fun.aggregate = mean)  %>%
   mutate_all(funs(ifelse(is.na(.), mean(., na.rm = TRUE), .))) 
 
-b = corr.test(a[,2:67])
+b = corr.test(a[,2:67], use=use.method)
 corrplot(b$r, method="color", order=cluster.method, tl.cex=0.4, title="all AA", mar=c(0,0,1,0), p.mat=b$p, sig.level=0.05, insig="blank")
 
 a = knew.molten3 %>%
@@ -260,7 +319,7 @@ a = knew.molten3 %>%
   dcast(ID ~ grain2, value.var="z", fun.aggregate = mean)  %>%
   mutate_all(funs(ifelse(is.na(.), mean(., na.rm = TRUE), .))) 
 
-b = corr.test(a[,2:67])
+b = corr.test(a[,2:67], use=use.method)
 corrplot(b$r, method="color", order=cluster.method, tl.cex=0.4, title="all AB", mar=c(0,0,1,0), p.mat=b$p, sig.level=0.05, insig="blank")
 
 ```
@@ -276,7 +335,7 @@ a = knew.molten3 %>%
   dcast(ID ~ grain2, value.var="z", fun.aggregate = mean)  %>%
   mutate_all(funs(ifelse(is.na(.), mean(., na.rm = TRUE), .))) 
 
-b = corr.test(a[,2:67])
+b = corr.test(a[,2:67], use=use.method)
 corrplot(b$r, method="color", order=cluster.method, tl.cex=0.4, title="all shock ol", mar=c(0,0,1,0), p.mat=b$p, sig.level=0.05, insig="blank")
 
 a = knew.molten3 %>%
@@ -288,14 +347,12 @@ a = knew.molten3 %>%
   dcast(ID ~ grain2, value.var="z", fun.aggregate = mean)  %>%
   mutate_all(funs(ifelse(is.na(.), mean(., na.rm = TRUE), .))) 
 
-b = corr.test(a[,2:67])
+b = corr.test(a[,2:67], use=use.method)
 corrplot(b$r, method="color", order=cluster.method, tl.cex=0.4, title="all context ol", mar=c(0,0,1,0), p.mat=b$p, sig.level=0.05, insig="blank")
 
 ```
 
 ### All animals - Compare each group
-
-
 ```{r}
 
 a = knew.molten3 %>%
@@ -307,7 +364,7 @@ a = knew.molten3 %>%
   dcast(ID ~ grain2, value.var="z", fun.aggregate = mean)  %>%
   mutate_all(funs(ifelse(is.na(.), mean(., na.rm = TRUE), .))) 
 
-b = corr.test(a[,2:67])
+b = corr.test(a[,2:67], use=use.method)
 corrplot(b$r, method="color", order=cluster.method, tl.cex=0.4, title=" shock AA", mar=c(0,0,1,0), p.mat=b$p, sig.level=0.05, insig="blank")
 
 
@@ -320,7 +377,7 @@ a = knew.molten3 %>%
   dcast(ID ~ grain2, value.var="z", fun.aggregate = mean)  %>%
   mutate_all(funs(ifelse(is.na(.), mean(., na.rm = TRUE), .))) 
 
-b = corr.test(a[,2:67])
+b = corr.test(a[,2:67], use=use.method)
 corrplot(b$r, method="color", order=cluster.method, tl.cex=0.4, title=" shock AB", mar=c(0,0,1,0), p.mat=b$p, sig.level=0.05, insig="blank")
 
 
@@ -333,7 +390,7 @@ a = knew.molten3 %>%
   dcast(ID ~ grain2, value.var="z", fun.aggregate = mean)  %>%
   mutate_all(funs(ifelse(is.na(.), mean(., na.rm = TRUE), .))) 
 
-b = corr.test(a[,2:67])
+b = corr.test(a[,2:67], use=use.method)
 corrplot(b$r, method="color", order=cluster.method, tl.cex=0.4, title=" ctx AA", mar=c(0,0,1,0), p.mat=b$p, sig.level=0.05, insig="blank")
 
 
@@ -346,14 +403,51 @@ a = knew.molten3 %>%
   dcast(ID ~ grain2, value.var="z", fun.aggregate = mean)  %>%
   mutate_all(funs(ifelse(is.na(.), mean(., na.rm = TRUE), .))) 
 
-b = corr.test(a[,2:67])
+b = corr.test(a[,2:67], use=use.method)
 corrplot(b$r, method="color", order=cluster.method, tl.cex=0.4, title=" ctx AB", mar=c(0,0,1,0), p.mat=b$p, sig.level=0.05, insig="blank")
 
+```
 
+### Compare subgroups vs. AGE
+```{r}
+for (expt in unique(knew.molten3$EXPT)) {
+  for (ctx in unique(knew.molten3$CONTEXT)) {
+    for (val in unique(knew.molten3$VALENCE)) {
+        a = knew.molten3 %>%
+          filter(CHANNEL == 'OL') %>%
+          filter(EXPT==expt) %>%
+          filter(CONTEXT==ctx & VALENCE ==val) %>%
+          filter(!(EXPT =='YOUNG' & VALENCE=='SHOCK' & CONTEXT=='AA' & FREEZE < 30)) %>% # removes young bad freezers
+          mutate(grain2 = paste(CHANNEL, SubROI_SubroiAGGR)) %>%
+          ddply(.(CHANNEL, SubROI_SubroiAGGR), transform, z = scale(value)) %>%
+          dcast(ID ~ grain2, value.var="z", fun.aggregate = mean)  %>%
+          mutate_all(funs(ifelse(is.na(.), mean(., na.rm = TRUE), .)))  %>%
+          select_if(~!all(is.na(.)))
+        
+        b = corr.test(a[,2:dim(a)[2]])
+        corrplot(b$r, method="color", order=cluster.method, tl.cex=0.4, 
+                 title=paste(val, ctx, expt), 
+                 mar=c(0,0,1,0), p.mat=b$p, sig.level=0.05, insig="blank")
+    }
+  }
+}
 ```
 
 
 ## H2BGFP
+```{r}
+a = knew.molten3 %>%
+  filter(CHANNEL == 'H2BGFP') %>%
+  filter(!(EXPT =='YOUNG' & VALENCE=='SHOCK' & CONTEXT=='AA' & FREEZE < 30)) %>% # removes young bad freezers
+  mutate(grain2 = paste(CHANNEL, SubROI_SubroiAGGR)) %>%
+  ddply(.(CHANNEL, SubROI_SubroiAGGR), transform, z = scale(value)) %>%
+  dcast(ID ~ grain2, value.var="z", fun.aggregate = mean) %>%
+  mutate_all(funs(ifelse(is.na(.), mean(., na.rm = TRUE), .)))
+
+b = corr.test(a[,2:67], use=use.method)
+corrplot(b$r, method="color", order=cluster.method, tl.cex=0.4, title="all mice, H2BGFP", mar=c(0,0,1,0), p.mat=b$p, sig.level=0.05, insig="blank")
+
+```
 
 ### H2B old vs Young
 ```{r}
@@ -367,7 +461,7 @@ a = knew.molten3 %>%
   dcast(ID ~ grain2, value.var="z", fun.aggregate = mean)  %>%
   mutate_all(funs(ifelse(is.na(.), mean(., na.rm = TRUE), .))) 
 
-b = corr.test(a[,2:67])
+b = corr.test(a[,2:67], use=use.method)
 corrplot(b$r, method="color", order=cluster.method, tl.cex=0.4, title="all young", mar=c(0,0,1,0), p.mat=b$p, sig.level=0.05, insig="blank")
 
 a = knew.molten3 %>%
@@ -379,7 +473,7 @@ a = knew.molten3 %>%
   dcast(ID ~ grain2, value.var="z", fun.aggregate = mean)  %>%
   mutate_all(funs(ifelse(is.na(.), mean(., na.rm = TRUE), .))) 
 
-b = corr.test(a[,2:67])
+b = corr.test(a[,2:67], use=use.method)
 corrplot(b$r, method="color", order=cluster.method, tl.cex=0.4, title="all old", mar=c(0,0,1,0), p.mat=b$p, sig.level=0.05, insig="blank")
 
 ```
@@ -389,7 +483,7 @@ corrplot(b$r, method="color", order=cluster.method, tl.cex=0.4, title="all old",
 ```{r}
 
 a = knew.molten3 %>%
-  filter(VALENCE == 'CONTEXT') %>%
+  filter(VALENCE == 'SHOCK') %>%
   filter(CHANNEL == 'H2BGFP') %>%
   filter(!(EXPT =='YOUNG' & VALENCE=='SHOCK' & CONTEXT=='AA' & FREEZE < 30)) %>% # removes young bad freezers
   mutate(grain2 = paste(CHANNEL, SubROI_SubroiAGGR)) %>%
@@ -397,8 +491,10 @@ a = knew.molten3 %>%
   dcast(ID ~ grain2, value.var="z", fun.aggregate = mean)  %>%
   mutate_all(funs(ifelse(is.na(.), mean(., na.rm = TRUE), .))) 
 
-b = corr.test(a[,2:67])
-corrplot(b$r, method="color", order=cluster.method, tl.cex=0.4, title="all shock h2b", mar=c(0,0,1,0))
+b = corr.test(a[,2:67], use=use.method)
+corrplot(b$r, method="color", order=cluster.method, tl.cex=0.4, title="all shock h2b", mar=c(0,0,1,0), p.mat=b$p, sig.level=0.05, insig="blank")
+
+corrplot(b$p, method="color", order=cluster.method, tl.cex=0.4, title="p-values, all shock h2b", mar=c(0,0,1,0), is.corr=F)
 
 a = knew.molten3 %>%
   filter(VALENCE == 'CONTEXT') %>%
@@ -414,8 +510,6 @@ corrplot(b$r, method="color", order=cluster.method, tl.cex=0.4, title="all conte
 
 ```
 ### All animals - Compare each group
-
-
 ```{r}
 
 a = knew.molten3 %>%
@@ -427,7 +521,7 @@ a = knew.molten3 %>%
   dcast(ID ~ grain2, value.var="z", fun.aggregate = mean)  %>%
   mutate_all(funs(ifelse(is.na(.), mean(., na.rm = TRUE), .))) 
 
-b = corr.test(a[,2:67])
+b = corr.test(a[,2:67], use=use.method)
 corrplot(b$r, method="color", order=cluster.method, tl.cex=0.4, title="shock AA", mar=c(0,0,1,0), p.mat=b$p, sig.level=0.05, insig="blank")
 
 
@@ -440,7 +534,7 @@ a = knew.molten3 %>%
   dcast(ID ~ grain2, value.var="z", fun.aggregate = mean)  %>%
   mutate_all(funs(ifelse(is.na(.), mean(., na.rm = TRUE), .))) 
 
-b = corr.test(a[,2:67])
+b = corr.test(a[,2:67], use=use.method)
 corrplot(b$r, method="color", order=cluster.method, tl.cex=0.4, title="shock AB", mar=c(0,0,1,0), p.mat=b$p, sig.level=0.05, insig="blank")
 
 
@@ -453,7 +547,7 @@ a = knew.molten3 %>%
   dcast(ID ~ grain2, value.var="z", fun.aggregate = mean)  %>%
   mutate_all(funs(ifelse(is.na(.), mean(., na.rm = TRUE), .))) 
 
-b = corr.test(a[,2:67])
+b = corr.test(a[,2:67], use=use.method)
 corrplot(b$r, method="color", order=cluster.method, tl.cex=0.4, title="ctx AA", mar=c(0,0,1,0), p.mat=b$p, sig.level=0.05, insig="blank")
 
 
@@ -466,9 +560,33 @@ a = knew.molten3 %>%
   dcast(ID ~ grain2, value.var="z", fun.aggregate = mean)  %>%
   mutate_all(funs(ifelse(is.na(.), mean(., na.rm = TRUE), .))) 
 
-b = corr.test(a[,2:67])
+b = corr.test(a[,2:67], use=use.method)
 corrplot(b$r, method="color", order=cluster.method, tl.cex=0.4, title="ctx AB", mar=c(0,0,1,0), p.mat=b$p, sig.level=0.05, insig="blank")
 
 ```
 
+### Compare subgroup vs. AGE
+```{r}
+for (expt in unique(knew.molten3$EXPT)) {
+  for (ctx in unique(knew.molten3$CONTEXT)) {
+    for (val in unique(knew.molten3$VALENCE)) {
+        a = knew.molten3 %>%
+          filter(CHANNEL == 'H2BGFP') %>%
+          filter(EXPT==expt) %>%
+          filter(CONTEXT==ctx & VALENCE ==val) %>%
+          filter(!(EXPT =='YOUNG' & VALENCE=='SHOCK' & CONTEXT=='AA' & FREEZE < 30)) %>% # removes young bad freezers
+          mutate(grain2 = paste(CHANNEL, SubROI_SubroiAGGR)) %>%
+          ddply(.(CHANNEL, SubROI_SubroiAGGR), transform, z = scale(value)) %>%
+          dcast(ID ~ grain2, value.var="z", fun.aggregate = mean)  %>%
+          mutate_all(funs(ifelse(is.na(.), mean(., na.rm = TRUE), .)))  %>%
+          select_if(~!all(is.na(.)))
+        
+        b = corr.test(a[,2:dim(a)[2]])
+        corrplot(b$r, method="color", order=cluster.method, tl.cex=0.4, 
+                 title=paste(val, ctx, expt), 
+                 mar=c(0,0,1,0), p.mat=b$p, sig.level=0.05, insig="blank")
+    }
+  }
+}
+```
 
